log/build_2024-03-11_02-19-42/ride_service_pkg/stdout_stderr.log
running egg_info
writing ../../build/ride_service_pkg/ride_service_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/ride_service_pkg/ride_service_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/ride_service_pkg/ride_service_pkg.egg-info/entry_points.txt
writing requirements to ../../build/ride_service_pkg/ride_service_pkg.egg-info/requires.txt
writing top-level names to ../../build/ride_service_pkg/ride_service_pkg.egg-info/top_level.txt
reading manifest file '../../build/ride_service_pkg/ride_service_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/ride_service_pkg/ride_service_pkg.egg-info/SOURCES.txt'
running build
running build_py
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
byte-compiling /home/kneely-ubuntu-22-04/project-repo/ucsd-mae-148-team-4/install/ride_service_pkg/lib/python3.10/site-packages/ride_service_pkg/ride_request_client.py to ride_request_client.cpython-310.pyc
  File "/home/kneely-ubuntu-22-04/project-repo/ucsd-mae-148-team-4/install/ride_service_pkg/lib/python3.10/site-packages/ride_service_pkg/ride_request_client.py", line 35
    else:
    ^^^^
SyntaxError: expected 'except' or 'finally' block

running install_data
running install_egg_info
removing '/home/kneely-ubuntu-22-04/project-repo/ucsd-mae-148-team-4/install/ride_service_pkg/lib/python3.10/site-packages/ride_service_pkg-0.0.1-py3.10.egg-info' (and everything under it)
Copying ../../build/ride_service_pkg/ride_service_pkg.egg-info to /home/kneely-ubuntu-22-04/project-repo/ucsd-mae-148-team-4/install/ride_service_pkg/lib/python3.10/site-packages/ride_service_pkg-0.0.1-py3.10.egg-info
running install_scripts
Installing ride_request_client script to /home/kneely-ubuntu-22-04/project-repo/ucsd-mae-148-team-4/install/ride_service_pkg/lib/ride_service_pkg
Installing ride_request_server script to /home/kneely-ubuntu-22-04/project-repo/ucsd-mae-148-team-4/install/ride_service_pkg/lib/ride_service_pkg
writing list of installed files to '/home/kneely-ubuntu-22-04/project-repo/ucsd-mae-148-team-4/build/ride_service_pkg/install.log'
